[gd_scene load_steps=6 format=3 uid="uid://sxn2hgsi1uru"]

[ext_resource type="Theme" uid="uid://dnh285uknn4tk" path="res://themes/default_ui.tres" id="1_0epxf"]
[ext_resource type="Script" path="res://scenes/main/collection_menu_ui.gd" id="1_nnofw"]
[ext_resource type="Texture2D" uid="uid://5ff2fix61gy0" path="res://assets/ui/icons/play_circle_64dp_F5F5F5.svg" id="1_uim4d"]
[ext_resource type="Texture2D" uid="uid://bp31ltdk55e77" path="res://assets/ui/icons/delete_64dp_F5F5F5.svg" id="3_2t0n0"]
[ext_resource type="Texture2D" uid="uid://c4nbm7sg8ugu4" path="res://assets/ui/icons/cloud_download_64dp_F5F5F5.svg" id="3_m8tcs"]

[node name="CollectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0epxf")
script = ExtResource("1_nnofw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="OpenButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 196
text = "Open"
icon = ExtResource("1_uim4d")
expand_icon = true

[node name="DownloadButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 196
text = "Download"
icon = ExtResource("3_m8tcs")
expand_icon = true

[node name="DeleteButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 196
text = "Delete"
icon = ExtResource("3_2t0n0")
expand_icon = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/OpenButton" to="." method="open_collection"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DownloadButton" to="." method="download_collection"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DeleteButton" to="." method="delete_collection"]
